--- a/app/views/user-list.pug
+++ b/app/views/user-list.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1 User List
+    h1= title
     ul
     each element in userData
         li= element.first_name+' - '+element.last_name+' - '+element.email
