--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -4,6 +4,8 @@ block content
   h1= title
   p LADDAV - Welcome to #{title}
 
+  a(href='/users/list') Felhasználók
+
   ul
   each val in [{1:'a'}, {1:2}, {1:3}, {1:4}, {1:5}]
     li #{val[1]}
