--- a/app/views/user.pug
+++ b/app/views/user.pug
@@ -2,4 +2,7 @@ extends layout
 
 block content
     h1= title
-    div= userData[0].first_name+' - '+userData[0].last_name+' - '+userData[0].email
+    div= userData[0].first_name+' - '+userData[0].last_name+' - '+userData[0].email+' - '+userData[0].api_token
+    form(action="/users/new-token", method="post", class="myForm")
+        input(type="hidden", name="id", value=userData[0].id)
+        input(type="submit", name="new_token", value="Új API TOKEN")
